--- a/stylesheets/first-edition-page2.css
+++ b/stylesheets/first-edition-page2.css
@@ -56,3 +56,121 @@
   left: 60.4%;
   width: 7.4%;
 }
+
+.gear-name {
+  left: 6.1%;
+  width: 18.3%;
+}
+
+.gear-weight {
+  left: 25%;
+  width: 2.4%;
+}
+
+.gear-1 {
+  bottom: 72.5%;
+}
+
+.gear-2 {
+  bottom: 70.7%;
+}
+
+.gear-3 {
+  bottom: 68.9%;
+}
+
+.gear-4 {
+  bottom: 66.9%;
+}
+
+.gear-5 {
+  bottom: 64.9%;
+}
+
+.gear-6 {
+  bottom: 63.1%;
+}
+
+.gear-7 {
+  bottom: 61.3%;
+}
+
+.gear-8 {
+  bottom: 59.5%;
+}
+
+.gear-9 {
+  bottom: 57.6%;
+}
+
+.gear-10 {
+  bottom: 55.8%;
+}
+
+.gear-11 {
+  bottom: 54%;
+}
+
+.gear-12 {
+  bottom: 52%;
+}
+
+.gear-13 {
+  bottom: 50%;
+}
+
+.gear-14 {
+  bottom: 48.2%;
+}
+
+.gear-15 {
+  bottom: 46.4%;
+}
+
+.gear-16 {
+  bottom: 44.6%;
+}
+
+.gear-17 {
+  bottom: 42.7%;
+}
+
+.gear-18 {
+  bottom: 40.9%;
+}
+
+.gear-19 {
+  bottom: 39%;
+}
+
+.gear-20 {
+  bottom: 37.1%;
+}
+
+.gear-21 {
+  bottom: 35.1%;
+}
+
+.gear-22 {
+  bottom: 33.3%;
+}
+
+.gear-23 {
+  bottom: 31.5%;
+}
+
+.gear-24 {
+  bottom: 29.6%;
+}
+
+.gear-25 {
+  bottom: 27.8%;
+}
+
+.gear-26 {
+  bottom: 26%;
+}
+
+.gear-total {
+  bottom: 24.1%;
+}
