feats and special abilities

--- a/stylesheets/first-edition-page2.css
+++ b/stylesheets/first-edition-page2.css
@@ -174,3 +174,136 @@
 .gear-total {
   bottom: 24.1%;
 }
+
+.feats, .special-abilities {
+  left: 29.7%;
+  width: 38.7%;
+}
+
+#feat-1 {
+  bottom: 72.8%;
+}
+
+#feat-2 {
+  bottom: 70.9%;
+}
+
+#feat-3 {
+  bottom: 69%
+}
+
+#feat-4 {
+  bottom: 67.2%;
+}
+
+#feat-5 {
+  bottom: 65.3%;
+}
+
+#feat-6 {
+  bottom: 63.4%
+}
+
+#feat-7 {
+  bottom: 61.6%;
+}
+
+#feat-8 {
+  bottom: 59.7%;
+}
+
+#feat-9 {
+  bottom: 57.8%;
+}
+
+#feat-10 {
+  bottom: 55.9%;
+}
+
+#feat-11 {
+  bottom: 54.1%;
+}
+
+#feat-12 {
+  bottom: 52.2%;
+}
+
+#special-ability-1 {
+  bottom: 46.7%;
+}
+
+#special-ability-2 {
+  bottom: 44.9%;
+}
+
+#special-ability-3 {
+  bottom: 43%;
+}
+
+#special-ability-4 {
+  bottom: 41.1%;
+}
+
+#special-ability-5 {
+  bottom: 39.3%
+}
+
+#special-ability-6 {
+  bottom: 37.4%;
+}
+
+#special-ability-7 {
+  bottom: 35.5%;
+}
+
+#special-ability-8 {
+  bottom: 33.6%;
+}
+
+#special-ability-9 {
+  bottom: 31.8%;
+}
+
+#special-ability-10 {
+  bottom: 29.9%;
+}
+
+#special-ability-11 {
+  bottom: 28%;
+}
+
+#special-ability-12 {
+  bottom: 26.1%;
+}
+
+#special-ability-13 {
+  bottom: 24.2%;
+}
+
+#special-ability-14 {
+  bottom: 22.4%;
+}
+
+#special-ability-15 {
+  bottom: 20.5%;
+}
+
+#special-ability-16 {
+  bottom: 18.7%;
+}
+
+#special-ability-17 {
+  bottom: 16.8%;
+}
+
+#special-ability-18 {
+  bottom: 14.9%;
+}
+
+#special-ability-19 {
+  bottom: 13.1%;
+}
+
+#special-ability-20 {
+  bottom: 11.1%;
+}
